--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #faf4d3;
-  /* background-color: rgb(134, 134, 35); */
+  background-color: #f5f1df;
 }
 header {
   background-color: #222;
@@ -123,16 +122,6 @@ li {
 #promotions span {
   animation: black-friday 1.2s ease infinite;
 }
-@keyframes info-floricultura {
-  0% {
-    width: 20px;
-    height: 20px;
-  }
-  100% {
-    width: 270px;
-    height: 200px;
-  }
-}
 
 #about #values h2,
 #goals h2,
@@ -154,7 +143,7 @@ li {
 }
 /* gallery */
 #gallery {
-  background-color: #faf4d3;
+  background-color: #f5f1df;
   padding: 0.1rem 0 0 0;
 }
 #gallery .container h1 {
@@ -178,29 +167,25 @@ li {
   font-weight: 600;
 }
 
-@keyframes black-friday {
-  0% {
-    color: #fff;
-  }
-  100% {
-    color: #000000;
-  }
-}
 #photos {
   width: 80%;
   margin: 2rem auto 4rem auto;
   display: flex;
   flex-wrap: wrap;
-  background-color: #fde3a7;
+  /* background-color: #fde3a7; */
 }
 #photos img {
   width: 200px;
   height: 150px;
   margin: 2rem 0 0 2rem;
-  background: linear-gradient(90deg, #b9a881 -30%, #7a6c4b 35%, #d6bd83 100%);
+  background: linear-gradient(90deg, #b9a881 -30%, #7a6c4b 35%, #dfbf76 100%);
+  transition: all 0.5s;
+  animation-timing-function: ease;
   cursor: pointer;
 }
-
+#photos img:hover {
+  transform: scale(1.1);
+}
 #photos h5 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
@@ -233,7 +218,7 @@ footer {
 footer p {
   text-align: center;
   position: relative;
-  bottom: -35px;
+  bottom: -25px;
 }
 footer ul {
   padding-top: 1rem;
@@ -253,51 +238,4 @@ footer ul li img {
 }
 footer ul li a {
   color: rgb(183, 121, 202);
-}
-@media (max-width: 600px) {
-  #photos {
-    width: 100%;
-    justify-content: center;
-  }
-  #photos img {
-    margin: 2rem 2rem 0 2rem;
-  }
-  #development {
-    flex-direction: column;
-    width: 100%;
-    margin-top: 0;
-  }
-  #development img {
-    width: 100%;
-  }
-  #development article {
-    /* background-color: rgb(214, 213, 213); */
-    width: 90%;
-  }
-  #about #values,
-  #goals,
-  #promotions {
-    width: 300px;
-    margin-left: 0rem;
-    text-align: start;
-    /* background-color: rgb(214, 213, 213); */
-  }
-  #about img {
-    display: none;
-    animation: info-floricultura 0.4s ease-in-out;
-    width: 270px;
-    height: 200px;
-  }
-  #about #values:hover > img,
-  #goals:hover > img,
-  #promotions:hover > img {
-    display: none;
-    animation: none;
-  }
-  #about #ramo {
-    display: none;
-  }
-  #about #galho {
-    display: none;
-  }
 }
