--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -26,7 +26,7 @@
   #about #values,
   #goals,
   #promotions {
-    width: 500px;
+    width: 100%;
     text-align: center;
     margin: auto;
   }
@@ -48,5 +48,8 @@
   #about #galho {
     display: block;
     margin: auto;
+  }
+  footer p {
+    bottom: -10px;
   }
 }
