--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,8 @@
 @media (max-width: 600px) {
+  #container-header h2 {
+    font-size: 0rem;
+    border: 1px solid red;
+  }
   #photos {
     width: 100%;
     justify-content: center;
