--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,8 +1,9 @@
 @media (max-width: 600px) {
   #container-header h2 {
-    font-size: 1rem;
-    border: 1px solid red;
+    margin: 0.8rem auto 0 auto;
+    font-size: 2.5rem;
   }
+
   #photos {
     width: 100%;
     justify-content: center;
@@ -34,6 +35,12 @@
     text-align: center;
     margin: auto;
   }
+  #about #values:hover,
+  #goals:hover,
+  #promotions:hover {
+    transform: none;
+    transition: none;
+  }
   #about img {
     display: block;
     margin: auto;
@@ -43,7 +50,7 @@
   #about #values:hover > img,
   #goals:hover > img,
   #promotions:hover > img {
-    display: none;
+    animation: none;
   }
   #about #ramo {
     display: none;
