--- a/styles/style.css
+++ b/styles/style.css
@@ -51,12 +51,15 @@ li {
   height: 70px;
 }
 #nav-header ul {
-  display: flex;
+  margin-top: 1.4rem;
 }
-#nav-header ul li > li {
+#nav-header ul {
+  display: flex;
+  align-items: center;
+}
+
+#nav-header ul :nth-of-type(2) {
   margin-left: 0.9rem;
-  border: 1px solid blue;
-  margin-top: 0.6rem;
 }
 #nav-header ul li a {
   font-weight: 500;
@@ -87,9 +90,12 @@ li {
   color: #333;
 }
 #development article p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 1.1rem;
   padding-left: 1rem;
   font-size: 1.1rem;
-  font-weight: 500;
+  color: rgb(87, 86, 86);
+  font-weight: 600;
 }
 #about {
   display: flex;
